# modular-bitfield

./: .actrc  Cargo.toml  adc_performance_benchmark_results.txt  const_max_analysis.md  expand_example.rs  expand_example_expanded.rs
.github/workflows/: rust.yml
benches/: adt_performance.rs  cmp_variable_bits.rs
impl/src/: bitfield_specifier.rs
impl/src/bitfield/: analyse.rs  config.rs  expand.rs  mod.rs  params.rs
impl/src/bitfield/variable/: analysis.rs  errors.rs  expand.rs  field_config.rs  field_config_ext.rs  mod.rs  tests.rs
impl/src/bitfield/variable/tests/: analysis_tests.rs  errors_tests.rs  expand_tests.rs  field_config_ext_tests.rs  field_config_tests.rs
impl/src/bitfield_specifier/: mod.rs
tests/bitfield/: enum_data_variants_comprehensive.rs  integration_midi_ump.rs  integration_unified_api.rs  mod.rs  test_bits_unification.rs  variable_bits.rs  variable_struct_advanced.rs  variable_struct_test.rs
